--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 <section>
     <div class="img-familia">
         <div class="card-familia">
-            <img src="./img/_108234702_gettyimages-515106948.jpg.webp" alt="la familia">
+            <img src="./img/img1.webp" alt="la familia">
             <h3>La familia</h3>
             <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
 
         <div class="card-familia">
-            <img src="./img/_108236099_gettyimages-515395248.jpg" alt="la familia">
+            <img src="./img/img2.jpg" alt="la familia">
             <h3>La familia</h3>
             <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
@@ -44,13 +44,13 @@
     <section>
         <div class="img-familia">
             <div class="card-familia">
-                <img src="./img/_108234702_gettyimages-515106948.jpg.webp" alt="la familia">
+                <img src="./img/img1.webp" alt="la familia">
                 <h3>Inicio</h3>
                 <p class="color">Contenido de inicio</p>
             </div>
 
             <div class="card-familia">
-                <img src="./img/_108236099_gettyimages-515395248.jpg" alt="la familia">
+                <img src="./img/img2.jpg" alt="la familia">
                 <h3>La familia</h3>
                 <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
