--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Mi Página Web</title>
-
-    <link rel="stylesheet" href="./estilos/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -13,13 +12,12 @@
 <header>
     <nav class="main-navbar">
         <h1 class="logo">Charles manson</h1>
-        <ul class="menu">
-            <!-- 🔧 ENLACE CORREGIDO -->
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#crimenes">Crímenes</a></li>
-            <li><a href="#juicio">Nosotros</a></li>
-            <li><a href="#quien">Contacto</a></li>
-        </ul>
+            <ul class="menu">
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="./enlaces/crimenes.html">Crímenes</a></li>
+                <li><a href="./enlaces/contacto.html">Contacto</a></li>
+                <li><a href="./enlaces/nosotros.html">Nosotros</a></li>
+            </ul>
     </nav>
 </header>
 
@@ -28,13 +26,15 @@
         <div class="card-familia">
             <img src="./img/img1.webp" alt="la familia">
             <h3>La familia</h3>
-            <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p class="color">Charles "Tex" Watson: Considerado la mano derecha de Manson, fue el ejecutor principal y líder
+                 táctico de los asesinatos en las casas de Sharon Tate y los LaBianca.</p>
         </div>
 
         <div class="card-familia">
             <img src="./img/img2.jpg" alt="la familia">
             <h3>La familia</h3>
-            <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p class="color">Susan Atkins (Sadie): Una de las seguidoras más devotas; participó directamente en el asesinato de 
+                la actriz Sharon Tate y escribió "PIG" (cerdo) con sangre en la puerta de la casa.</p>
         </div>
     </div>
 </section>
@@ -46,13 +46,15 @@
             <div class="card-familia">
                 <img src="./img/img1.webp" alt="la familia">
                 <h3>Inicio</h3>
-                <p class="color">Contenido de inicio</p>
+                <p class="color">ruce Davis: Mano derecha de Manson en varios delitos. Fue condenado por los asesinatos de Gary Hinman y el trabajador del rancho Donald "Shorty" Shea. A pesar de haber solicitado libertad 
+                    condicional más de 30 veces, sigue en prisión debido a la gravedad de sus actos.</p>
             </div>
 
             <div class="card-familia">
                 <img src="./img/img2.jpg" alt="la familia">
                 <h3>La familia</h3>
-                <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="color">Patricia Krenwinkel: Participó en ambas noches de matanza (Tate y LaBianca). Es conocida por haber perseguido y apuñalado
+                     a la heredera Abigail Folger en el jardín de la residencia Tate.</p>
             </div>
         </div>
     </section>
@@ -64,12 +66,14 @@
             <div class="card-familia">
                 <img src="./img/img1.webp" alt="la familia">
                 <h3>Crímenes</h3>
-                <p class="color">Contenido de crímenes</p>
+                <p class="color">Charles Manson fue el cerebro y líder mesiánico de la "Familia". Aunque es uno de los criminales más famosos del siglo XX, lo curioso es que nunca mató físicamente a nadie con sus propias manos en los crímenes de 1969;
+                     fue condenado por conspiración y por ordenar a sus seguidores que lo hicieran</p>
             </div>
             <div class="card-familia">
                 <img src="./img/img2.jpg" alt="la familia">
                 <h3>La familia</h3>
-                <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="color">Leslie Van Houten: Aunque no estuvo en la casa de Tate, participó en el asesinato de los LaBianca.
+                     Recientemente, en 2023, obtuvo la libertad condicional tras más de 50 años en prisión.</p>
             </div>
         </div>
     </section>
@@ -81,12 +85,14 @@
             <div class="card-familia">
                 <img src="./img/img1.webp" alt="la familia">
                 <h3>Juicio</h3>
-                <p class="color">Contenido de juicio</p>
+                <p class="color">Mary Brunner: Fue la primera seguidora de Manson y madre de uno de sus hijos.
+                     Ayudó a reclutar a otros miembros al inicio de la formación del grupo. </p>
             </div>
             <div class="card-familia">
                 <img src="./img/img2.jpg" alt="la familia">
                 <h3>La familia</h3>
-                <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="color">Linda Kasabian: Actuó como conductora y vigía durante los crímenes. Nunca llegó a entrar a las casas
+                     y fue el testigo estrella de la fiscalía, lo que le permitió obtener inmunidad.</p>
             </div>
         </div>
     </section>
@@ -98,12 +104,14 @@
             <div class="card-familia">
                 <img src="./img/img1.webp" alt="la familia">
                 <h3>Contacto</h3>
-                <p class="color">Contenido de contacto</p>
+                <p class="color">Steve "Clem" Grogan: Participó en el asesinato de Donald Shea. Fue sentenciado a muerte, pero el juez cambió su pena a cadena perpetua al considerarlo "demasiado estúpido y drogado" para actuar por cuenta propia. Fue liberado bajo palabra en 1985 tras ayudar a localizar el cuerpo de Shea,
+                     siendo uno de los pocos condenados por asesinato en salir de prisión.</p>
             </div>
             <div class="card-familia">
                 <img src="./img/img2.jpg" alt="la familia">
                 <h3>La familia</h3>
-                <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="color">Lynette "Squeaky" Fromme: No participó en los asesinatos de 1969, pero fue una defensora acérrima de Manson.
+                     Años después, en 1975, intentó asesinar al presidente estadounidense Gerald Ford.</p>
             </div>
         </div>
     </section>
@@ -112,17 +120,17 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-col">
-            <h2 class="footer-logo">MiLogo</h2>
-            <p class="footer-text">Tu portal de contenidos.</p>
+            <h2 class="footer-logo">Mi nombres Sebastian chuquimia leon tengo 21 años estudiante de programacion </h2>
+            <p class="footer-text">.</p>
         </div>
 
         <div class="footer-col">
             <h3>Enlaces</h3>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#crimenes">Crímenes</a></li>
-                <li><a href="#juicio">Nosotros</a></li>
-                <li><a href="#quien">Contacto</a></li>
+                <li><a href="./enlaces/crimenes.html">Crímenes</a></li>
+                <li><a href="./enlaces/contacto.html">Contacto</a></li>
+                <li><a href="./enlaces/nosotros.html">Nosotros</a></li>
             </ul>
         </div>
 
