--- a/enlaces/contacto.html
+++ b/enlaces/contacto.html
@@ -1,41 +1,58 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
+    <title>Iniciar Sesión</title>
+
     <link rel="stylesheet" href="../estilos/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <h1 class="logo">Charles manson</h1>
-            <ul class="menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./servicio.html">Servicios</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-        <section id="inicio">
-            <h2>Inicio</h2>
-            <p>Bienvenido a mi sitio web.</p>
-        </section>
 
-        <section id="servicios">
-            <h2>Servicios</h2>
-            <p>Descripción de servicios.</p>
-        </section>
+<header>
+    <nav class="main-navbar">
+        <h1 class="logo">Charles Manson</h1>
+        <ul class="menu">
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="crimenes.html">Crímenes</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="nosotros.html">Nosotros</a></li>
+        </ul>
+    </nav>
+</header>
 
-        <section id="contacto">
-            <h2>Contacto</h2>
-            <p>Información de contacto.</p>
-        </section>
-    </main>
-    <footer>
-        <p>...</p>
-    </footer>
+<section class="login-section">
+    <div class="login-card">
+        <h2>Iniciar Sesión</h2>
+        <p class="login-text">Accedé a contenido exclusivo</p>
 
+        <form>
+            <div class="mb-3">
+                <label for="email" class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" id="email" placeholder="correo@email.com" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="telefono" class="form-label">Teléfono</label>
+                <input type="tel" class="form-control" id="telefono" placeholder="+54 11 1234 5678" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="password" placeholder="••••••••" required>
+            </div>
+
+            <button type="submit" class="btn btn-login w-100">
+                Ingresar
+            </button>
+        </form>
+
+        <p class="login-footer">
+            ¿No tenés cuenta? <a href="#">Registrate</a>
+        </p>
+    </div>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
