--- a/enlaces/crimenes.html
+++ b/enlaces/crimenes.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiénes Somos</title>
+    <title>Crímenes - Charles Manson</title>
 
     <link rel="stylesheet" href="../estilos/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -22,45 +21,35 @@
     </nav>
 </header>
 
-<section class="about-section container my-5">
-    <div class="row">
-        <div class="col-md-10 mx-auto about-card">
-
-            <h2>¿Quiénes somos?</h2>
-            <p>
-                Somos un proyecto independiente dedicado al análisis y la documentación de
-                casos criminales que marcaron la historia. Nuestro enfoque es informativo,
-                histórico y educativo.
-            </p>
-
-            <h3>¿Por qué hablamos de asesinos seriales?</h3>
-            <p>
-                Los asesinos seriales representan uno de los fenómenos más complejos del
-                comportamiento humano. Estudiar estos casos permite comprender los factores
-                psicológicos, sociales y culturales que pueden llevar a una persona a cometer
-                crímenes extremos.
-            </p>
-
-            <p>
-                Esta página no busca glorificar la violencia ni justificar los actos cometidos.
-                Nuestro objetivo es brindar contexto, información verificable y promover una
-                mirada crítica sobre estos hechos.
-            </p>
-
-            <h3>Nuestro objetivo</h3>
-            <ul class="about-list">
-                <li>Analizar casos desde una perspectiva histórica y psicológica</li>
-                <li>Informar con respeto hacia las víctimas</li>
-                <li>Evitar la romantización de la violencia</li>
-                <li>Promover el pensamiento crítico</li>
-            </ul>
-
-            <p class="about-warning">
-                El contenido presentado puede resultar sensible para algunas personas.
-                Recomendamos discreción.
-            </p>
-
+<section class="container my-5">
+    <div class="row align-items-center">
+        
+        <!-- IMAGEN -->
+        <div class="col-md-5 mb-4 mb-md-0">
+            <img src="../img/img1.webp" alt="La familia Manson" class="img-fluid rounded shadow">
         </div>
+
+        <!-- TEXTO -->
+        <div class="col-md-7">
+            <h2 class="mb-3">Los crímenes de Charles Manson</h2>
+            <p>
+                Charles Manson fue el líder de la llamada <strong>“Familia Manson”</strong>, 
+                un grupo sectario responsable de una serie de asesinatos ocurridos en 1969 
+                en California, Estados Unidos.
+            </p>
+            <p>
+                Aunque Manson no cometió los asesinatos con sus propias manos, fue quien 
+                manipuló psicológicamente a sus seguidores para que llevaran a cabo los crímenes. 
+                El más conocido fue el asesinato de la actriz <strong>Sharon Tate</strong>, 
+                quien estaba embarazada de ocho meses.
+            </p>
+            <p>
+                Estos hechos causaron un gran impacto en la sociedad estadounidense y marcaron 
+                el fin simbólico del movimiento hippie de los años 60. Manson fue condenado 
+                a cadena perpetua y pasó el resto de su vida en prisión.
+            </p>
+        </div>
+
     </div>
 </section>
 
