--- a/enlaces/nosotros.html
+++ b/enlaces/nosotros.html
@@ -12,7 +12,7 @@
 
 <header>
     <nav class="main-navbar">
-        <h1 class="logo">Charles Manson</h1>
+        <h1 class="logo">CHARLES MANSON</h1>
         <ul class="menu">
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="crimenes.html">Crímenes</a></li>
@@ -67,8 +67,7 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-col">
-            <h2 class="footer-logo">Mi nombres Sebastian chuquimia leon tengo 21 años estudiante de programacion</h2>
-            <p class="footer-text">.</p>
+            <h2 class="footer-logo">Historias reales e investigación criminal.</h2>
         </div>
 
         <div class="footer-col">
