--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
     <nav class="main-navbar">
-        <h1 class="logo">Charles manson</h1>
+        <h1 class="logo">CHARLES MANSON</h1>
             <ul class="menu">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="./enlaces/crimenes.html">Crímenes</a></li>
@@ -24,14 +24,14 @@
 <section>
     <div class="img-familia">
         <div class="card-familia">
-            <img src="./img/img1.webp" alt="la familia">
+            <img src="./img/charles tex.avif" alt="la familia">
             <h3>La familia</h3>
             <p class="color">Charles "Tex" Watson: Considerado la mano derecha de Manson, fue el ejecutor principal y líder
                  táctico de los asesinatos en las casas de Sharon Tate y los LaBianca.</p>
         </div>
 
         <div class="card-familia">
-            <img src="./img/img2.jpg" alt="la familia">
+            <img src="./img/susan.png" alt="la familia">
             <h3>La familia</h3>
             <p class="color">Susan Atkins (Sadie): Una de las seguidoras más devotas; participó directamente en el asesinato de 
                 la actriz Sharon Tate y escribió "PIG" (cerdo) con sangre en la puerta de la casa.</p>
@@ -40,18 +40,18 @@
 </section>
 
 <!-- 🔹 SECCIONES CON ID CORRECTOS -->
-<div class="item" id="inicio">
+<div class="item" id="la familia">
     <section>
         <div class="img-familia">
             <div class="card-familia">
-                <img src="./img/img1.webp" alt="la familia">
-                <h3>Inicio</h3>
+                <img src="./img/david_ap.jpg.webp" alt="la familia">
+                <h3>La familia</h3>
                 <p class="color">ruce Davis: Mano derecha de Manson en varios delitos. Fue condenado por los asesinatos de Gary Hinman y el trabajador del rancho Donald "Shorty" Shea. A pesar de haber solicitado libertad 
                     condicional más de 30 veces, sigue en prisión debido a la gravedad de sus actos.</p>
             </div>
 
             <div class="card-familia">
-                <img src="./img/img2.jpg" alt="la familia">
+                <img src="./img/sandra.jpg" alt="la familia">
                 <h3>La familia</h3>
                 <p class="color">Patricia Krenwinkel: Participó en ambas noches de matanza (Tate y LaBianca). Es conocida por haber perseguido y apuñalado
                      a la heredera Abigail Folger en el jardín de la residencia Tate.</p>
@@ -64,13 +64,13 @@
     <section>
         <div class="img-familia">
             <div class="card-familia">
-                <img src="./img/img1.webp" alt="la familia">
-                <h3>Crímenes</h3>
+                <img src="./img/Manson.jpg "alt="la familia">
+                <h3>La familia</h3>
                 <p class="color">Charles Manson fue el cerebro y líder mesiánico de la "Familia". Aunque es uno de los criminales más famosos del siglo XX, lo curioso es que nunca mató físicamente a nadie con sus propias manos en los crímenes de 1969;
                      fue condenado por conspiración y por ordenar a sus seguidores que lo hicieran</p>
             </div>
             <div class="card-familia">
-                <img src="./img/img2.jpg" alt="la familia">
+                <img src="./img/leslieI.jpg" alt="la familia">
                 <h3>La familia</h3>
                 <p class="color">Leslie Van Houten: Aunque no estuvo en la casa de Tate, participó en el asesinato de los LaBianca.
                      Recientemente, en 2023, obtuvo la libertad condicional tras más de 50 años en prisión.</p>
@@ -83,8 +83,8 @@
     <section>
         <div class="img-familia">
             <div class="card-familia">
-                <img src="./img/img1.webp" alt="la familia">
-                <h3>Juicio</h3>
+                <img src="./img/mary.jpg" alt="la familia">
+                <h3>La familia</h3>
                 <p class="color">Mary Brunner: Fue la primera seguidora de Manson y madre de uno de sus hijos.
                      Ayudó a reclutar a otros miembros al inicio de la formación del grupo. </p>
             </div>
@@ -102,13 +102,13 @@
     <section>
         <div class="img-familia">
             <div class="card-familia">
-                <img src="./img/img1.webp" alt="la familia">
-                <h3>Contacto</h3>
+                <img src="./img/susan.png" alt="la familia">
+                <h3>La familia</h3>
                 <p class="color">Steve "Clem" Grogan: Participó en el asesinato de Donald Shea. Fue sentenciado a muerte, pero el juez cambió su pena a cadena perpetua al considerarlo "demasiado estúpido y drogado" para actuar por cuenta propia. Fue liberado bajo palabra en 1985 tras ayudar a localizar el cuerpo de Shea,
                      siendo uno de los pocos condenados por asesinato en salir de prisión.</p>
             </div>
             <div class="card-familia">
-                <img src="./img/img2.jpg" alt="la familia">
+                <img src="./img/img1.webp" alt="la familia">
                 <h3>La familia</h3>
                 <p class="color">Lynette "Squeaky" Fromme: No participó en los asesinatos de 1969, pero fue una defensora acérrima de Manson.
                      Años después, en 1975, intentó asesinar al presidente estadounidense Gerald Ford.</p>
@@ -120,8 +120,8 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-col">
-            <h2 class="footer-logo">Mi nombres Sebastian chuquimia leon tengo 21 años estudiante de programacion </h2>
-            <p class="footer-text">.</p>
+            <h2 class="footer-logo">    
+                Historias reales e investigación criminal. </h2>
         </div>
 
         <div class="footer-col">
