--- a/enlaces/contacto.html
+++ b/enlaces/contacto.html
@@ -11,7 +11,7 @@
 
 <header>
     <nav class="main-navbar">
-        <h1 class="logo">Charles Manson</h1>
+        <h1 class="logo">CHARLES MANSON</h1>
         <ul class="menu">
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="crimenes.html">Crímenes</a></li>
@@ -52,6 +52,33 @@
         </p>
     </div>
 </section>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-col">
+            <h2 class="footer-logo">    
+                Historias reales e investigación criminal. </h2>
+        </div>
+
+        <div class="footer-col">
+            <h3>Enlaces</h3>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="./enlaces/crimenes.html">Crímenes</a></li>
+                <li><a href="./enlaces/contacto.html">Contacto</a></li>
+                <li><a href="./enlaces/nosotros.html">Nosotros</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-col">
+            <h3>Redes</h3>
+            <div class="redes">
+                <a href="#" class="icon">Instagram</a>
+                <a href="#" class="icon">Twitter</a>
+                <a href="#" class="icon">YouTube</a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
